# font

./: CLAUDE-OPUS-4.5.md  CLAUDE.md  Cargo.toml  GEMINI-3-PRO.md  README.md
docs/: CLAUDE_THINKING.md
playground/: README.md  download_fonts.rs  search_fonts.rs
src/: cdn.rs  cli.rs  config.rs  download.rs  lib.rs  main.rs  models.rs  search.rs
src/providers/: bunny_fonts.rs  dafont.rs  font_library.rs  fonts1001.rs  fontshare.rs  fontsource.rs  fontspace.rs  fontsquirrel.rs  github_fonts.rs  google_fonts.rs  mod.rs
