[package]
name = "dx-font"
version = "0.0.1"
edition = "2021"
description = "A comprehensive font search and download tool with access to 50k+ commercial-free fonts"
authors = ["dx-font contributors"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Progress indicators
indicatif = "0.17"
console = "0.15"

# Parallel processing
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# URL handling
url = "2.5"

# File system
tokio-stream = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTML parsing (for scraping font sites)
scraper = "0.18"

# Regex
regex = "1.10"

# Directory utilities
dirs = "5.0"

[[bin]]
name = "dx-font"
path = "src/main.rs"

[[example]]
name = "search_fonts"
path = "playground/search_fonts.rs"

[[example]]
name = "download_fonts"
path = "playground/download_fonts.rs"
